[gd_scene load_steps=2 format=3 uid="uid://cy26yovqm0ibi"]

[ext_resource type="Script" path="res://scenes/gui.gd" id="1_to8py"]

[node name="Gui" type="CanvasLayer"]
script = ExtResource("1_to8py")

[node name="Objective" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 16.0
offset_right = 240.0
offset_bottom = 44.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Objective: \"I'm feeling hungry, find me something round\""
horizontal_alignment = 1

[node name="TimeLeft" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -183.0
offset_top = 16.0
offset_right = -18.0
offset_bottom = 44.0
grow_horizontal = 0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Time Left: 1m32s"
horizontal_alignment = 1

[node name="WinLoseContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -44.0
offset_right = 168.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinLoseText" type="Label" parent="WinLoseContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "The King is pleased! You Win!"

[node name="RoundsPlayed" type="Label" parent="WinLoseContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Rounds Played: 12"

[node name="TimePlayed" type="Label" parent="WinLoseContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Time Played: 3m44s"

[node name="NewGameButton" type="Button" parent="WinLoseContainer"]
layout_mode = 2
text = "New Game"

[connection signal="pressed" from="WinLoseContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
